[project]
name = "topo_map_processor"
description = "Library for processing topographic maps"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sreeram Kandimalla", email = "kandimalla.sreeram@gmail.com" },
]
dependencies = [
    "gh-release-tools>=0.1.12",
    "mercantile>=1.2.1",
    "pmtiles-mosaic>=0.1.0",
    "requests>=2.32.4",
    "shapely>=2.1.1",
]
dynamic = [
    "version"
]

[project.optional-dependencies]
easyocr = [
    "easyocr>=1.7.2",
]
parse = [
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "imgcat>=0.6.0",
    "opencv-python-headless>=4.11.0.86",
    "pyproj>=3.7.1",
    "pytesseract>=0.3.13",
    "rasterio>=1.4.3",
]

[project.urls]
homepage = "https://github.com/ramSeraph/topo_map_processor"
repository = "https://github.com/ramSeraph/topo_map_processor.git"


[project.scripts]
collect-bounds = "topo_map_processor.tools.collect_bounds:cli"
retile = "topo_map_processor.tools.retile:cli"
tile = "topo_map_processor.tools.tile:cli"
retile-e2e = "topo_map_processor.tools.retile_e2e:cli"
create-force-redo-bounds = "topo_map_processor.tools.create_force_redo_bounds:cli"

[build-system]
requires = [
    "hatchling",
    "hatch-vcs"
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "topo_map_processor/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "topo_map_processor",
]

[tool.hatch.build.targets.wheel]
include = [
    "topo_map_processor",
]

